--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 75030ad
-	trimbase = 
+	trim = husky_desktop
+	base = 35c9d32
+	trimbase = 75030ad
 	parent = upstream
 	previous = 0c4fe46
