--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1bf7846
+	base = d6939d9
 	trimbase = 
 	parent = debian/indigo/husky_viz
-	previous = 
+	previous = 1bf7846
