--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 35c9d32
+	base = ece93a6
 	trimbase = 
 	parent = release/indigo/husky_desktop
-	previous = 
+	previous = 35c9d32
