--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8533590
+	base = b35b160
 	trimbase = 
 	parent = debian/indigo/husky_desktop
-	previous = 
+	previous = 8533590
