--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 65b9eca
+	base = d944657
 	trimbase = 
 	parent = release/indigo/husky_viz
-	previous = 
+	previous = 65b9eca
