--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0fa30db
+	base = c78228f
 	trimbase = 
 	parent = rpm/indigo/husky_viz
-	previous = 
+	previous = 0fa30db
