--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f59092d
+	base = d9a4db1
 	trimbase = 
 	parent = rpm/indigo/husky_desktop
-	previous = 
+	previous = f59092d
