--- a/husky_viz/package.xml
+++ b/husky_viz/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package>
   <name>husky_viz</name>
-  <version>0.2.0</version>
+  <version>0.2.1</version>
   <description>Visualization configuration for Clearpath Husky</description>
 
   <author email="rgariepy@clearpathrobotics.com">Ryan Gariepy</author>
@@ -12,11 +12,11 @@
   <license>BSD</license>
 
   <url type="website">http://ros.org/wiki/husky_viz</url>
-  <url type="bugtracker">https://github.com/husky/husky_viz/issues</url>
-  <url type="repository">https://github.com/husly/husky_viz</url>
+  <url type="bugtracker">https://github.com/husky/husky_desktop/issues</url>
+  <url type="repository">https://github.com/husly/husky_desktop</url>
 
   <buildtool_depend>catkin</buildtool_depend>
- 
+
   <build_depend>roslaunch</build_depend>
 
   <run_depend>husky_description</run_depend>
