--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = husky_desktop
-	base = df48851
-	trimbase = 
+	base = 3818cd9
+	trimbase = df48851
 	parent = upstream
 	previous = 55c7b31
