--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = husky_viz
-	base = 6e64ed2
-	trimbase = 
+	base = 6ca8ac1
+	trimbase = 6e64ed2
 	parent = upstream
 	previous = 55c7b31
