--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = husky_desktop
-	base = f20039a
-	trimbase = 
+	base = 6b6c4f6
+	trimbase = f20039a
 	parent = upstream
 	previous = 5d49017
