--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = husky_viz
-	base = 5c11038
-	trimbase = 
+	base = 225e9c0
+	trimbase = 5c11038
 	parent = upstream
 	previous = 5d49017
